third_party/move/move-compiler-v2/tests/more-v1/deprecated/assert_function.exp

Diagnostics:
error: no function named `assert` found
  ┌─ tests/more-v1/deprecated/assert_function.move:3:9
  │
3 │         assert(true, 42);
  │         ^^^^^^^^^^^^^^^^
